# winget_sandbox

./: download.py  extract.py  meson.build  run.bat  sandbox.wsb.in
share/: install.ps1  meson.build
